--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -1,188 +1,242 @@
-name: deseq2_DE
+name: deseq
 channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _r-mutex=1.0.1=anacondar_1
-  - binutils_impl_linux-64=2.31.1=h7fc9f1b_5
-  - binutils_linux-64=2.31.1=h6176602_14
-  - bioconductor-annotate=1.64.0=r36_0
-  - bioconductor-annotationdbi=1.48.0=r36_0
-  - bioconductor-biobase=2.46.0=r36h516909a_0
-  - bioconductor-biocgenerics=0.32.0=r36_0
-  - bioconductor-biocparallel=1.20.0=r36he1b5a44_0
-  - bioconductor-biostrings=2.54.0=r36h516909a_0
-  - bioconductor-delayedarray=0.12.0=r36h516909a_0
-  - bioconductor-deseq2=1.26.0=r36he1b5a44_0
-  - bioconductor-genefilter=1.68.0=r36hc99cbb1_0
-  - bioconductor-geneplotter=1.64.0=r36_0
-  - bioconductor-genomeinfodb=1.22.0=r36_0
-  - bioconductor-genomeinfodbdata=1.2.2=r36_0
-  - bioconductor-genomicalignments=1.22.0=r36h516909a_0
-  - bioconductor-genomicranges=1.38.0=r36h516909a_0
-  - bioconductor-iranges=2.20.0=r36h516909a_0
-  - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
-  - bioconductor-rsamtools=2.2.0=r36he1b5a44_0
-  - bioconductor-rtracklayer=1.46.0=r36h516909a_0
-  - bioconductor-s4vectors=0.24.0=r36h516909a_0
-  - bioconductor-summarizedexperiment=1.16.0=r36_0
-  - bioconductor-xvector=0.26.0=r36h516909a_0
-  - bioconductor-zlibbioc=1.32.0=r36h516909a_0
-  - bwidget=1.9.13=0
-  - bzip2=1.0.8=h516909a_3
-  - ca-certificates=2020.12.5=ha878542_0
-  - cairo=1.16.0=hcf35c78_1003
-  - curl=7.65.3=hf8cf82a_0
-  - fontconfig=2.13.1=h86ecdb6_1001
-  - freetype=2.10.0=he06d7ca_2
-  - fribidi=1.0.5=h516909a_1003
-  - gcc_impl_linux-64=7.3.0=habb00fd_1
-  - gcc_linux-64=7.3.0=h553295d_14
-  - gettext=0.19.8.1=hf34092f_1004
-  - gfortran_impl_linux-64=7.3.0=hdf63c60_5
-  - gfortran_linux-64=7.3.0=h553295d_14
-  - glib=2.58.3=h6f030ca_1002
-  - graphite2=1.3.13=h58526e2_1001
-  - gsl=2.5=h294904e_1
-  - gxx_impl_linux-64=7.3.0=hdf63c60_1
-  - gxx_linux-64=7.3.0=h553295d_14
-  - harfbuzz=2.4.0=h9f30f68_3
-  - icu=64.2=he1b5a44_1
-  - jpeg=9c=h14c3975_1001
-  - krb5=1.16.3=h05b26f9_1001
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libcurl=7.65.3=hda55be3_0
-  - libedit=3.1.20170329=hf8c457e_1001
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_5
-  - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=14_openblas
-  - libopenblas=0.3.7=h5ec1e0e_6
-  - libpng=1.6.37=h21135ba_2
-  - libssh2=1.8.2=h22169c7_2
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=hfc65ed5_0
-  - libuuid=2.32.1=h14c3975_1000
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.10=hee79883_0
-  - lz4-c=1.8.3=he1b5a44_1001
-  - make=4.2.1=h14c3975_2004
-  - ncurses=6.1=hf484d3e_1002
-  - openssl=1.1.1h=h516909a_0
-  - pango=1.42.4=ha030887_1
-  - pcre=8.43=he1b5a44_0
-  - pigz=2.3.4=hed695b0_1
-  - pixman=0.38.0=h516909a_1003
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - r-acepack=1.4.1=r36h9bbef5b_1005
-  - r-assertthat=0.2.1=r36h6115d3f_2
-  - r-backports=1.1.5=r36hcdcec82_0
-  - r-base=3.6.1=h3a67422_6
-  - r-base64enc=0.1_3=r36hcdcec82_1004
-  - r-bh=1.69.0_1=r36h6115d3f_1
-  - r-bit=1.1_14=r36hcdcec82_1
-  - r-bit64=0.9_7.1=r36hcdcec82_0
-  - r-bitops=1.0_6=r36hcdcec82_1004
-  - r-blob=1.2.0=r36_1
-  - r-catools=1.17.1.2=r36h0357c0b_1
-  - r-checkmate=1.9.4=r36hcdcec82_1
-  - r-cli=1.1.0=r36h6115d3f_2
-  - r-cluster=2.1.0=r36h9bbef5b_3
-  - r-colorspace=1.4_1=r36hcdcec82_2
-  - r-crayon=1.3.4=r36h6115d3f_1003
-  - r-data.table=1.12.6=r36hcdcec82_0
-  - r-dbi=1.0.0=r36h6115d3f_1002
-  - r-digest=0.6.22=r36h0357c0b_0
-  - r-ellipsis=0.3.0=r36hcdcec82_1
-  - r-evaluate=0.14=r36h6115d3f_2
-  - r-fansi=0.4.0=r36hcdcec82_1001
-  - r-foreign=0.8_72=r36hcdcec82_0
-  - r-formatr=1.7=r36h6115d3f_2
-  - r-formula=1.2_3=r36h6115d3f_1003
-  - r-futile.logger=1.4.3=r36h6115d3f_1003
-  - r-futile.options=1.0.1=r36h6115d3f_1002
-  - r-gdata=2.18.0=r36h6115d3f_1003
-  - r-ggplot2=3.2.1=r36h6115d3f_0
-  - r-glue=1.3.1=r36hcdcec82_1
-  - r-gplots=3.0.1.1=r36h6115d3f_1
-  - r-gridextra=2.3=r36h6115d3f_1003
-  - r-gtable=0.3.0=r36h6115d3f_3
-  - r-gtools=3.8.1=r36hcdcec82_1003
-  - r-highr=0.8=r36h6115d3f_2
-  - r-hmisc=4.2_0=r36h9bbef5b_2
-  - r-htmltable=1.13.2=r36h6115d3f_0
-  - r-htmltools=0.4.0=r36h0357c0b_1
-  - r-htmlwidgets=1.5.1=r36h6115d3f_1
-  - r-jsonlite=1.6.1=r36hcdcec82_1
-  - r-kernsmooth=2.23_15=r36h9bbef5b_1004
-  - r-knitr=1.25=r36h6115d3f_0
-  - r-labeling=0.3=r36h6115d3f_1003
-  - r-lambda.r=1.2.4=r36h6115d3f_1
-  - r-lattice=0.20_38=r36hcdcec82_1002
-  - r-latticeextra=0.6_28=r36h6115d3f_1002
-  - r-lazyeval=0.2.2=r36hcdcec82_2
-  - r-locfit=1.5_9.1=r36h516909a_1004
-  - r-magrittr=1.5=r36h6115d3f_1003
-  - r-markdown=1.1=r36hcdcec82_1
-  - r-mass=7.3_51.4=r36hcdcec82_1
-  - r-matrix=1.2_17=r36hcdcec82_1
-  - r-matrixstats=0.55.0=r36hcdcec82_0
-  - r-memoise=1.1.0=r36h6115d3f_1004
-  - r-mgcv=1.8_29=r36hcdcec82_0
-  - r-mime=0.7=r36hcdcec82_1
-  - r-munsell=0.5.0=r36h6115d3f_1003
-  - r-nlme=3.1_141=r36h9bbef5b_1
-  - r-nnet=7.3_12=r36hcdcec82_1003
-  - r-pillar=1.4.2=r36h6115d3f_2
-  - r-pkgconfig=2.0.3=r36h6115d3f_1
-  - r-plogr=0.2.0=r36h6115d3f_1003
-  - r-plyr=1.8.4=r36h0357c0b_1003
-  - r-prettyunits=1.0.2=r36h6115d3f_1002
-  - r-r6=2.4.0=r36h6115d3f_2
-  - r-rcolorbrewer=1.1_2=r36h6115d3f_1003
-  - r-rcpp=1.0.3=r36h0357c0b_0
-  - r-rcpparmadillo=0.9.800.1.0=r36h0357c0b_0
-  - r-rcurl=1.95_4.12=r36hcdcec82_1
-  - r-reshape2=1.4.3=r36h0357c0b_1004
-  - r-rlang=0.4.1=r36hcdcec82_0
-  - r-rpart=4.1_15=r36hcdcec82_2
-  - r-rsqlite=2.1.2=r36h0357c0b_1
-  - r-rstudioapi=0.10=r36h6115d3f_2
-  - r-scales=1.0.0=r36h0357c0b_1002
-  - r-snow=0.4_3=r36h6115d3f_1002
-  - r-stringi=1.4.3=r36h0e574ca_3
-  - r-stringr=1.4.0=r36h6115d3f_2
-  - r-survival=2.44_1.1=r36hcdcec82_1
-  - r-tibble=2.1.3=r36hcdcec82_1
-  - r-utf8=1.1.4=r36hcdcec82_1003
-  - r-vctrs=0.2.0=r36hcdcec82_1
-  - r-viridis=0.5.1=r36h6115d3f_1004
-  - r-viridislite=0.3.0=r36h6115d3f_1003
-  - r-withr=2.1.2=r36h6115d3f_1001
-  - r-xfun=0.10=r36h6115d3f_0
-  - r-xml=3.98_1.20=r36hcdcec82_1
-  - r-xtable=1.8_4=r36h6115d3f_3
-  - r-yaml=2.2.0=r36hcdcec82_1002
-  - r-zeallot=0.1.0=r36h6115d3f_1002
-  - readline=8.0=h46ee950_1
-  - sed=4.7=h1bed415_1000
-  - tk=8.6.9=hed695b0_1003
-  - tktable=2.10=h555a92e_3
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.9=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.4=h516909a_1002
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.3=h3b9ef0a_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - _r-mutex=1.0.1
+  - binutils_impl_linux-64=2.31.1
+  - binutils_linux-64=2.31.1
+  - bioconductor-annotate=1.68.0
+  - bioconductor-annotationdbi=1.52.0
+  - bioconductor-aroma.light=3.20.0
+  - bioconductor-biobase=2.50.0
+  - bioconductor-biocfilecache=1.14.0
+  - bioconductor-biocgenerics=0.36.0
+  - bioconductor-biocparallel=1.24.0
+  - bioconductor-biomart=2.46.0
+  - bioconductor-biostrings=2.58.0
+  - bioconductor-delayedarray=0.16.0
+  - bioconductor-deseq2=1.30.0
+  - bioconductor-edaseq=2.24.0
+  - bioconductor-edger=3.32.0
+  - bioconductor-genefilter=1.72.0
+  - bioconductor-geneplotter=1.68.0
+  - bioconductor-genomeinfodb=1.26.0
+  - bioconductor-genomeinfodbdata=1.2.3
+  - bioconductor-genomicalignments=1.26.0
+  - bioconductor-genomicfeatures=1.42.0
+  - bioconductor-genomicranges=1.42.0
+  - bioconductor-iranges=2.24.0
+  - bioconductor-limma=3.46.0
+  - bioconductor-matrixgenerics=1.2.0
+  - bioconductor-rhtslib=1.22.0
+  - bioconductor-rsamtools=2.6.0
+  - bioconductor-rtracklayer=1.50.0
+  - bioconductor-ruvseq=1.24.0
+  - bioconductor-s4vectors=0.28.0
+  - bioconductor-shortread=1.48.0
+  - bioconductor-summarizedexperiment=1.20.0
+  - bioconductor-xvector=0.30.0
+  - bioconductor-zlibbioc=1.36.0
+  - bwidget=1.9.13
+  - bzip2=1.0.8
+  - ca-certificates=2021.1.19
+  - cairo=1.16.0
+  - curl=7.69.1
+  - fontconfig=2.13.1
+  - freetype=2.10.0
+  - fribidi=1.0.5
+  - gcc_impl_linux-64=7.3.0
+  - gcc_linux-64=7.3.0
+  - gettext=0.19.8.1
+  - gfortran_impl_linux-64=7.3.0
+  - gfortran_linux-64=7.3.0
+  - glib=2.58.3
+  - graphite2=1.3.13
+  - gsl=2.6
+  - gxx_impl_linux-64=7.3.0
+  - gxx_linux-64=7.3.0
+  - harfbuzz=2.4.0
+  - icu=64.2
+  - jpeg=9c
+  - krb5=1.17.2
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcurl=7.69.1
+  - libedit=3.1.20210216
+  - libffi=3.2.1
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=7.5.0
+  - libgfortran4=7.5.0
+  - libgomp=9.3.0
+  - libiconv=1.15
+  - liblapack=3.8.0
+  - libopenblas=0.3.7
+  - libpng=1.6.37
+  - libssh2=1.8.2
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.1.0
+  - libuuid=2.32.1
+  - libxcb=1.13
+  - libxml2=2.9.10
+  - lz4-c=1.8.3
+  - make=4.2.1
+  - ncurses=6.2
+  - openssl=1.1.1j
+  - pango=1.42.4
+  - pcre=8.43
+  - pcre2=10.34
+  - pigz=2.3.4
+  - pixman=0.38.0
+  - pthread-stubs=0.4
+  - r-acepack=1.4.1
+  - r-askpass=1.1
+  - r-assertthat=0.2.1
+  - r-backports=1.2.1
+  - r-base=4.0.0
+  - r-base64enc=0.1_3
+  - r-bh=1.75.0_0
+  - r-biocmanager=1.30.10
+  - r-bit=4.0.4
+  - r-bit64=4.0.5
+  - r-bitops=1.0_6
+  - r-blob=1.2.1
+  - r-brio=1.1.1
+  - r-cachem=1.0.4
+  - r-callr=3.5.1
+  - r-catools=1.18.1
+  - r-checkmate=2.0.0
+  - r-cli=2.3.1
+  - r-cluster=2.1.0
+  - r-colorspace=2.0_0
+  - r-crayon=1.4.1
+  - r-curl=4.3
+  - r-data.table=1.14.0
+  - r-dbi=1.1.1
+  - r-dbplyr=2.1.0
+  - r-desc=1.3.0
+  - r-diffobj=0.3.3
+  - r-digest=0.6.27
+  - r-dplyr=1.0.5
+  - r-ellipsis=0.3.1
+  - r-evaluate=0.14
+  - r-fansi=0.4.2
+  - r-farver=2.1.0
+  - r-fastmap=1.1.0
+  - r-foreign=0.8_81
+  - r-formatr=1.8
+  - r-formula=1.2_4
+  - r-futile.logger=1.4.3
+  - r-futile.options=1.0.1
+  - r-gdata=2.18.0
+  - r-generics=0.1.0
+  - r-ggplot2=3.3.3
+  - r-glue=1.4.2
+  - r-gplots=3.1.1
+  - r-gridextra=2.3
+  - r-gtable=0.3.0
+  - r-gtools=3.8.2
+  - r-highr=0.8
+  - r-hmisc=4.4_1
+  - r-hms=1.0.0
+  - r-htmltable=2.1.0
+  - r-htmltools=0.5.1.1
+  - r-htmlwidgets=1.5.3
+  - r-httr=1.4.2
+  - r-hwriter=1.3.2
+  - r-isoband=0.2.4
+  - r-jpeg=0.1_8.1
+  - r-jsonlite=1.7.2
+  - r-kernsmooth=2.23_18
+  - r-knitr=1.31
+  - r-labeling=0.4.2
+  - r-lambda.r=1.2.4
+  - r-lattice=0.20_41
+  - r-latticeextra=0.6_29
+  - r-lazyeval=0.2.2
+  - r-lifecycle=1.0.0
+  - r-locfit=1.5_9.4
+  - r-magrittr=2.0.1
+  - r-markdown=1.1
+  - r-mass=7.3_53.1
+  - r-matrix=1.3_2
+  - r-matrixstats=0.58.0
+  - r-memoise=2.0.0
+  - r-mgcv=1.8_34
+  - r-mime=0.10
+  - r-munsell=0.5.0
+  - r-nlme=3.1_150
+  - r-nnet=7.3_15
+  - r-openssl=1.4.3
+  - r-pillar=1.5.1
+  - r-pkgbuild=1.2.0
+  - r-pkgconfig=2.0.3
+  - r-pkgload=1.2.0
+  - r-plogr=0.2.0
+  - r-plyr=1.8.6
+  - r-png=0.1_7
+  - r-praise=1.0.0
+  - r-prettyunits=1.1.1
+  - r-processx=3.4.5
+  - r-progress=1.2.2
+  - r-ps=1.6.0
+  - r-purrr=0.3.4
+  - r-r.methodss3=1.8.1
+  - r-r.oo=1.24.0
+  - r-r.utils=2.10.1
+  - r-r6=2.5.0
+  - r-rappdirs=0.3.3
+  - r-rcolorbrewer=1.1_2
+  - r-rcpp=1.0.6
+  - r-rcpparmadillo=0.10.2.2.0
+  - r-rcurl=1.98_1.2
+  - r-rematch2=2.1.2
+  - r-reshape2=1.4.4
+  - r-rlang=0.4.10
+  - r-rpart=4.1_15
+  - r-rprojroot=2.0.2
+  - r-rsqlite=2.2.4
+  - r-rstudioapi=0.13
+  - r-scales=1.1.1
+  - r-snow=0.4_3
+  - r-stringi=1.4.6
+  - r-stringr=1.4.0
+  - r-survival=3.2_10
+  - r-sys=3.4
+  - r-testthat=3.0.2
+  - r-tibble=3.1.0
+  - r-tidyselect=1.1.0
+  - r-utf8=1.2.1
+  - r-vctrs=0.3.6
+  - r-viridis=0.5.1
+  - r-viridislite=0.3.0
+  - r-waldo=0.2.5
+  - r-withr=2.4.1
+  - r-xfun=0.20
+  - r-xml=3.99_0.6
+  - r-xml2=1.3.2
+  - r-xtable=1.8_4
+  - r-yaml=2.2.1
+  - r-zeallot=0.1.0
+  - readline=8.0
+  - sed=4.7
+  - tk=8.6.10
+  - tktable=2.10
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.9
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.5
+  - zlib=1.2.11
+  - zstd=1.4.3
