--- a/envs/edger_DE.yaml
+++ b/envs/edger_DE.yaml
@@ -1,129 +1,175 @@
-name: edger_DE
+name: edger
 channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=0_gnu
-  - _r-mutex=1.0.1=anacondar_1
-  - binutils_impl_linux-64=2.33.1=h53a641e_8
-  - binutils_linux-64=2.33.1=h9595d00_16
-  - bioconductor-biobase=2.46.0=r36h516909a_0
-  - bioconductor-biocgenerics=0.32.0=r36_0
-  - bioconductor-biocparallel=1.20.0=r36he1b5a44_0
-  - bioconductor-biostrings=2.54.0=r36h516909a_0
-  - bioconductor-delayedarray=0.12.0=r36h516909a_0
-  - bioconductor-edger=3.28.0=r36he1b5a44_0
-  - bioconductor-genomeinfodb=1.22.0=r36_0
-  - bioconductor-genomeinfodbdata=1.2.2=r36_0
-  - bioconductor-genomicalignments=1.22.0=r36h516909a_0
-  - bioconductor-genomicranges=1.38.0=r36h516909a_0
-  - bioconductor-iranges=2.20.0=r36h516909a_0
-  - bioconductor-limma=3.42.0=r36h516909a_0
-  - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
-  - bioconductor-rsamtools=2.2.0=r36he1b5a44_0
-  - bioconductor-rtracklayer=1.46.0=r36h516909a_0
-  - bioconductor-s4vectors=0.24.0=r36h516909a_0
-  - bioconductor-summarizedexperiment=1.16.0=r36_0
-  - bioconductor-xvector=0.26.0=r36h516909a_0
-  - bioconductor-zlibbioc=1.32.0=r36h516909a_0
-  - bwidget=1.9.14=0
-  - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2020.12.5=ha878542_0
-  - cairo=1.16.0=hfb77d84_1002
-  - curl=7.68.0=hf8cf82a_0
-  - fontconfig=2.13.1=h86ecdb6_1001
-  - freetype=2.10.0=he983fc9_1
-  - fribidi=1.0.5=h516909a_1002
-  - gcc_impl_linux-64=7.3.0=hd420e75_5
-  - gcc_linux-64=7.3.0=h553295d_16
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - gfortran_impl_linux-64=7.3.0=hdf63c60_5
-  - gfortran_linux-64=7.3.0=h553295d_16
-  - glib=2.58.3=h6f030ca_1002
-  - graphite2=1.3.13=hf484d3e_1000
-  - gsl=2.6=h294904e_0
-  - gxx_impl_linux-64=7.3.0=hdf63c60_5
-  - gxx_linux-64=7.3.0=h553295d_16
-  - harfbuzz=2.4.0=h9f30f68_3
-  - icu=64.2=he1b5a44_1
-  - jpeg=9c=h14c3975_1001
-  - krb5=1.16.4=h2fd8d38_0
-  - ld_impl_linux-64=2.33.1=h53a641e_8
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libcurl=7.68.0=hda55be3_0
-  - libedit=3.1.20170329=hf8c457e_1001
-  - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.2.0=h24d8f2e_2
-  - libgfortran-ng=7.3.0=hdf63c60_5
-  - libgomp=9.2.0=h24d8f2e_2
-  - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=14_openblas
-  - libopenblas=0.3.7=h5ec1e0e_6
-  - libpng=1.6.37=hed695b0_0
-  - libssh2=1.8.2=h22169c7_2
-  - libstdcxx-ng=9.2.0=hdf63c60_2
-  - libtiff=4.1.0=hc3755c2_3
-  - libuuid=2.32.1=h14c3975_1000
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.10=hee79883_0
-  - lz4-c=1.8.3=he1b5a44_1001
-  - make=4.2.1=h14c3975_2004
-  - ncurses=6.1=hf484d3e_1002
-  - openssl=1.1.1h=h516909a_0
-  - pango=1.42.4=ha030887_1
-  - pcre=8.44=he1b5a44_0
-  - pixman=0.38.0=h516909a_1003
-  - pthread-stubs=0.4=h14c3975_1001
-  - r-assertthat=0.2.1=r36h6115d3f_0
-  - r-base=3.6.2=h7ed4ef7_1
-  - r-bh=1.69.0_1=r36h6115d3f_0
-  - r-bitops=1.0_6=r36hcdcec82_1003
-  - r-cli=1.1.0=r36h6115d3f_0
-  - r-crayon=1.3.4=r36h6115d3f_0
-  - r-dplyr=0.8.0.1=r36h29659fb_0
-  - r-fansi=0.4.0=r36h96ca727_0
-  - r-formatr=1.7=r36h6115d3f_1
-  - r-futile.logger=1.4.3=r36h6115d3f_1002
-  - r-futile.options=1.0.1=r36h6115d3f_1001
-  - r-glue=1.3.1=r36h96ca727_0
-  - r-lambda.r=1.2.4=r36h6115d3f_0
-  - r-lattice=0.20_38=r36hcdcec82_1002
-  - r-locfit=1.5_9.1=r36h516909a_1004
-  - r-magrittr=1.5=r36h6115d3f_4
-  - r-matrix=1.2_18=r36h7fa42b6_3
-  - r-matrixstats=0.57.0=r36hcdcec82_0
-  - r-pillar=1.3.1=r36h6115d3f_0
-  - r-pkgconfig=2.0.2=r36h6115d3f_0
-  - r-plogr=0.2.0=r36h6115d3f_0
-  - r-purrr=0.3.2=r36h96ca727_0
-  - r-r6=2.4.0=r36h6115d3f_0
-  - r-rcpp=1.0.3=r36h0357c0b_0
-  - r-rcurl=1.98_1.1=r36hcdcec82_0
-  - r-rlang=0.3.4=r36h96ca727_0
-  - r-snow=0.4_3=r36h6115d3f_1001
-  - r-statmod=1.4.33=r36h6e990d7_0
-  - r-tibble=2.1.1=r36h96ca727_0
-  - r-tidyselect=0.2.5=r36h29659fb_0
-  - r-utf8=1.1.4=r36h96ca727_0
-  - r-xml=3.99_0.3=r36hcdcec82_1
-  - readline=8.0=hf8c457e_0
-  - sed=4.7=h1bed415_1000
-  - tk=8.6.10=hed695b0_0
-  - tktable=2.10=h555a92e_3
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.9=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.4=h14c3975_1001
-  - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h3b9ef0a_1
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - _r-mutex=1.0.1
+  - binutils_impl_linux-64=2.33.1
+  - binutils_linux-64=2.33.1
+  - bioconductor-annotate=1.64.0
+  - bioconductor-annotationdbi=1.48.0
+  - bioconductor-aroma.light=3.16.0
+  - bioconductor-biobase=2.46.0
+  - bioconductor-biocfilecache=1.10.0
+  - bioconductor-biocgenerics=0.32.0
+  - bioconductor-biocparallel=1.20.0
+  - bioconductor-biomart=2.42.0
+  - bioconductor-biostrings=2.54.0
+  - bioconductor-delayedarray=0.12.0
+  - bioconductor-deseq=1.38.0
+  - bioconductor-edaseq=2.20.0
+  - bioconductor-edger=3.28.0
+  - bioconductor-genefilter=1.68.0
+  - bioconductor-geneplotter=1.64.0
+  - bioconductor-genomeinfodb=1.22.0
+  - bioconductor-genomeinfodbdata=1.2.2
+  - bioconductor-genomicalignments=1.22.0
+  - bioconductor-genomicfeatures=1.38.0
+  - bioconductor-genomicranges=1.38.0
+  - bioconductor-iranges=2.20.0
+  - bioconductor-limma=3.42.0
+  - bioconductor-rhtslib=1.18.0
+  - bioconductor-rsamtools=2.2.0
+  - bioconductor-rtracklayer=1.46.0
+  - bioconductor-ruvseq=1.20.0
+  - bioconductor-s4vectors=0.24.0
+  - bioconductor-shortread=1.44.0
+  - bioconductor-summarizedexperiment=1.16.0
+  - bioconductor-xvector=0.26.0
+  - bioconductor-zlibbioc=1.32.0
+  - bwidget=1.9.14
+  - bzip2=1.0.8
+  - ca-certificates=2021.1.19
+  - cairo=1.16.0
+  - curl=7.68.0
+  - fontconfig=2.13.1
+  - freetype=2.10.0
+  - fribidi=1.0.5
+  - gcc_impl_linux-64=7.3.0
+  - gcc_linux-64=7.3.0
+  - gettext=0.19.8.1
+  - gfortran_impl_linux-64=7.3.0
+  - gfortran_linux-64=7.3.0
+  - glib=2.58.3
+  - graphite2=1.3.13
+  - gsl=2.6
+  - gxx_impl_linux-64=7.3.0
+  - gxx_linux-64=7.3.0
+  - harfbuzz=2.4.0
+  - icu=64.2
+  - jpeg=9c
+  - krb5=1.16.4
+  - ld_impl_linux-64=2.33.1
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcurl=7.68.0
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=7.3.0
+  - libgomp=9.3.0
+  - libiconv=1.15
+  - liblapack=3.8.0
+  - libopenblas=0.3.7
+  - libpng=1.6.37
+  - libssh2=1.8.2
+  - libstdcxx-ng=9.2.0
+  - libtiff=4.1.0
+  - libuuid=2.32.1
+  - libxcb=1.13
+  - libxml2=2.9.10
+  - lz4-c=1.8.3
+  - make=4.2.1
+  - ncurses=6.1
+  - openssl=1.1.1j
+  - pango=1.42.4
+  - pcre=8.44
+  - pixman=0.38.0
+  - pthread-stubs=0.4
+  - r-askpass=1.1
+  - r-assertthat=0.2.1
+  - r-base=3.6.2
+  - r-bh=1.69.0_1
+  - r-biocmanager=1.30.10
+  - r-bit=4.0.4
+  - r-bit64=4.0.5
+  - r-bitops=1.0_6
+  - r-blob=1.1.1
+  - r-cli=1.1.0
+  - r-crayon=1.3.4
+  - r-curl=4.3
+  - r-dbi=1.1.1
+  - r-dbplyr=1.4.3
+  - r-digest=0.6.27
+  - r-dplyr=0.8.0.1
+  - r-fansi=0.4.0
+  - r-formatr=1.7
+  - r-futile.logger=1.4.3
+  - r-futile.options=1.0.1
+  - r-glue=1.3.1
+  - r-hms=0.4.2
+  - r-httr=1.4.2
+  - r-hwriter=1.3.2
+  - r-jpeg=0.1_8.1
+  - r-jsonlite=1.7.2
+  - r-lambda.r=1.2.4
+  - r-lattice=0.20_38
+  - r-latticeextra=0.6_29
+  - r-locfit=1.5_9.1
+  - r-magrittr=1.5
+  - r-mass=7.3_53.1
+  - r-matrix=1.2_18
+  - r-matrixstats=0.57.0
+  - r-memoise=1.1.0
+  - r-mime=0.10
+  - r-openssl=1.4.3
+  - r-pillar=1.3.1
+  - r-pkgconfig=2.0.2
+  - r-plogr=0.2.0
+  - r-png=0.1_7
+  - r-prettyunits=1.1.1
+  - r-progress=1.2.2
+  - r-purrr=0.3.2
+  - r-r.methodss3=1.8.1
+  - r-r.oo=1.24.0
+  - r-r.utils=2.10.1
+  - r-r6=2.4.0
+  - r-rappdirs=0.3.3
+  - r-rcolorbrewer=1.1_2
+  - r-rcpp=1.0.3
+  - r-rcurl=1.98_1.1
+  - r-rlang=0.3.4
+  - r-rsqlite=2.1.2
+  - r-snow=0.4_3
+  - r-statmod=1.4.33
+  - r-stringi=1.4.6
+  - r-stringr=1.4.0
+  - r-survival=3.2_10
+  - r-sys=3.4
+  - r-tibble=2.1.1
+  - r-tidyselect=0.2.5
+  - r-utf8=1.1.4
+  - r-xml=3.99_0.3
+  - r-xtable=1.8_4
+  - readline=8.0
+  - sed=4.7
+  - tk=8.6.10
+  - tktable=2.10
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.9
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.4
+  - zlib=1.2.11
+  - zstd=1.4.4
