--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -46,6 +46,7 @@ dependencies:
   - bzip2=1.0.8
   - ca-certificates=2021.1.19
   - cairo=1.16.0
+  - certifi=2020.12.5
   - curl=7.69.1
   - fontconfig=2.13.1
   - freetype=2.10.0
@@ -64,6 +65,7 @@ dependencies:
   - icu=64.2
   - jpeg=9c
   - krb5=1.17.2
+  - ld_impl_linux-64=2.34
   - libblas=3.8.0
   - libcblas=3.8.0
   - libcurl=7.69.1
@@ -91,8 +93,11 @@ dependencies:
   - pcre=8.43
   - pcre2=10.34
   - pigz=2.3.4
+  - pip=21.0.1
   - pixman=0.38.0
   - pthread-stubs=0.4
+  - python=3.8.6
+  - python_abi=3.8
   - r-acepack=1.4.1
   - r-askpass=1.1
   - r-assertthat=0.2.1
@@ -224,8 +229,13 @@ dependencies:
   - r-zeallot=0.1.0
   - readline=8.0
   - sed=4.7
+  - setuptools=52.0.0
+  - sqlite=3.35.2
   - tk=8.6.10
   - tktable=2.10
+  - wheel=0.36.2
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
@@ -233,10 +243,15 @@ dependencies:
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
   - xorg-libxrender=0.9.10
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.5
   - zlib=1.2.11
   - zstd=1.4.3
+prefix: /home/fall/anaconda3/envs/deseq
