--- a/envs/edger_DE.yaml
+++ b/envs/edger_DE.yaml
@@ -187,17 +187,24 @@ dependencies:
   - tk=8.6.10
   - tktable=2.10
   - wheel=0.36.2
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
-  - xorg-libx11=1.7.0
+  - xorg-libx11=1.6.12
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
   - xorg-libxrender=0.9.10
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.5
   - zlib=1.2.11
   - zstd=1.4.9
+prefix: /home/fall/anaconda3/envs/edger
