--- a/envs/macs.yaml
+++ b/envs/macs.yaml
@@ -13,10 +13,10 @@ dependencies:
   - bwidget=1.9.14
   - bzip2=1.0.8
   - c-ares=1.17.1
-  - ca-certificates=2020.12.8
+  - ca-certificates=2021.1.19
   - cairo=1.16.0
   - certifi=2020.12.5
-  - curl=7.71.1
+  - curl=7.75.0
   - fontconfig=2.13.1
   - freetype=2.10.4
   - fribidi=1.0.10
@@ -29,8 +29,8 @@ dependencies:
   - gsl=2.6
   - gxx_impl_linux-64=9.3.0
   - gxx_linux-64=9.3.0
-  - harfbuzz=2.7.4
-  - htslib=1.11
+  - harfbuzz=2.8.0
+  - htslib=1.12
   - icu=68.1
   - jpeg=9d
   - kernel-headers_linux-64=2.6.32
@@ -38,20 +38,20 @@ dependencies:
   - ld_impl_linux-64=2.35.1
   - libblas=3.9.0
   - libcblas=3.9.0
-  - libcurl=7.71.1
-  - libdeflate=1.6
-  - libedit=3.1.20191231
+  - libcurl=7.75.0
+  - libdeflate=1.7
+  - libedit=3.1.20210216
   - libev=4.33
   - libffi=3.3
   - libgcc-devel_linux-64=9.3.0
   - libgcc-ng=9.3.0
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
-  - libglib=2.66.4
+  - libglib=2.68.0
   - libgomp=9.3.0
   - libiconv=1.16
   - liblapack=3.9.0
-  - libnghttp2=1.41.0
+  - libnghttp2=1.43.0
   - libopenblas=0.3.12
   - libpng=1.6.37
   - libssh2=1.9.0
@@ -59,28 +59,28 @@ dependencies:
   - libstdcxx-ng=9.3.0
   - libtiff=4.2.0
   - libuuid=2.32.1
-  - libwebp-base=1.1.0
+  - libwebp-base=1.2.0
   - libxcb=1.14
   - libxml2=2.9.10
   - lz4-c=1.9.3
   - macs2=2.2.7.1
   - make=4.3
   - ncurses=6.2
-  - numpy=1.19.5
-  - openssl=1.1.1i
-  - pango=1.42.4
+  - numpy=1.20.2
+  - openssl=1.1.1k
+  - pango=1.48.4
   - pcre=8.44
   - pcre2=10.36
-  - pip=20.3.3
+  - pip=21.0.1
   - pixman=0.40.0
   - python=3.8.6
   - python_abi=3.8
   - r-base=4.0.3
-  - readline=8.0
-  - samtools=1.11
+  - readline=8.1
+  - samtools=1.12
   - sed=4.8
-  - setuptools=51.0.0
-  - sqlite=3.34.0
+  - setuptools=52.0.0
+  - sqlite=3.35.3
   - sysroot_linux-64=2.12
   - tk=8.6.10
   - tktable=2.10
@@ -88,13 +88,13 @@ dependencies:
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
-  - xorg-libx11=1.6.12
+  - xorg-libx11=1.7.0
   - xorg-libxext=1.3.4
   - xorg-libxrender=0.9.10
-  - xorg-libxt=1.2.0
+  - xorg-libxt=1.2.1
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.5
   - zlib=1.2.11
-  - zstd=1.4.8
+  - zstd=1.4.9
