--- a/envs/bedtools.yaml
+++ b/envs/bedtools.yaml
@@ -1,27 +1,33 @@
-name: bedtools
+name: nextbed
 channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
   - _libgcc_mutex=0.1
-  - bedtools=2.29.0
+  - bedtools=2.30.0
   - bzip2=1.0.8
-  - ca-certificates=2019.9.11
-  - curl=7.65.3
-  - grep=2.14
-  - krb5=1.16.3
-  - libcurl=7.65.3
-  - libdeflate=1.3
-  - libedit=3.1.20170329
+  - c-ares=1.17.1
+  - ca-certificates=2021.1.19
+  - curl=7.71.1
+  - grep=3.4
+  - htslib=1.11
+  - krb5=1.17.2
+  - libcurl=7.71.1
+  - libdeflate=1.7
+  - libedit=3.1.20210216
+  - libev=4.33
   - libgcc=7.2.0
-  - libgcc-ng=7.3.0
-  - libssh2=1.8.2
-  - libstdcxx-ng=7.3.0
-  - ncurses=5.9
-  - openssl=1.1.1c
-  - samtools=1.9
-  - tk=8.6.9
-  - xz=5.2.4
+  - libgcc-ng=9.2.0
+  - libnghttp2=1.41.0
+  - libssh2=1.9.0
+  - libstdcxx-ng=9.3.0
+  - ncurses=6.2
+  - openssl=1.1.1k
+  - pcre=8.44
+  - pigz=2.4
+  - samtools=1.11
+  - tk=8.6.10
+  - xz=5.2.5
   - zlib=1.2.11
-  - pigz=2.3.4
