--- a/envs/picard.yaml
+++ b/envs/picard.yaml
@@ -1,4 +1,4 @@
-name: macs
+name: picardtools
 channels:
   - conda-forge
   - bioconda
@@ -8,6 +8,8 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - _r-mutex=1.0.1
+  - _sysroot_linux-64_curr_repodata_hack=3
+  - alsa-lib=1.2.3
   - binutils_impl_linux-64=2.35.1
   - binutils_linux-64=2.35
   - bwidget=1.9.14
@@ -15,7 +17,6 @@ dependencies:
   - c-ares=1.17.1
   - ca-certificates=2021.1.19
   - cairo=1.16.0
-  - certifi=2020.12.5
   - curl=7.75.0
   - fontconfig=2.13.1
   - freetype=2.10.4
@@ -25,21 +26,21 @@ dependencies:
   - gettext=0.19.8.1
   - gfortran_impl_linux-64=9.3.0
   - gfortran_linux-64=9.3.0
+  - giflib=5.2.1
   - graphite2=1.3.14
   - gsl=2.6
   - gxx_impl_linux-64=9.3.0
   - gxx_linux-64=9.3.0
   - harfbuzz=2.8.0
-  - htslib=1.12
   - icu=68.1
   - jpeg=9d
-  - kernel-headers_linux-64=2.6.32
+  - kernel-headers_linux-64=3.10.0
   - krb5=1.17.2
+  - lcms2=2.12
   - ld_impl_linux-64=2.35.1
   - libblas=3.9.0
   - libcblas=3.9.0
   - libcurl=7.75.0
-  - libdeflate=1.7
   - libedit=3.1.20210216
   - libev=4.33
   - libffi=3.3
@@ -63,35 +64,34 @@ dependencies:
   - libxcb=1.14
   - libxml2=2.9.10
   - lz4-c=1.9.3
-  - macs2=2.2.7.1
   - make=4.3
   - ncurses=6.2
-  - numpy=1.20.2
-  - openssl=1.1.1k
-  - pango=1.48.4
+  - openjdk=11.0.9.1
+  - openssl=1.1.1j
+  - pango=1.42.4
   - pcre=8.44
   - pcre2=10.36
-  - pip=21.0.1
+  - picard=2.25.1
   - pixman=0.40.0
-  - python=3.8.6
-  - python_abi=3.8
   - r-base=4.0.3
   - readline=8.1
-  - samtools=1.12
   - sed=4.8
-  - setuptools=52.0.0
-  - sqlite=3.35.3
-  - sysroot_linux-64=2.12
+  - sysroot_linux-64=2.17
   - tk=8.6.10
   - tktable=2.10
-  - wheel=0.36.2
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
-  - xorg-libx11=1.7.0
+  - xorg-libx11=1.6.12
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
   - xorg-libxrender=0.9.10
   - xorg-libxt=1.2.1
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
