--- a/envs/nextsnakes.yaml
+++ b/envs/nextsnakes.yaml
@@ -8,189 +8,225 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - aioeasywebdav=2.4.0
-  - aiohttp=3.6.2
+  - aiohttp=3.7.4
   - alabaster=0.7.12
-  - alsa-lib=1.1.5
+  - alsa-lib=1.2.3
   - amply=0.1.4
-  - appdirs=1.4.3
+  - appdirs=1.4.4
   - async-timeout=3.0.1
-  - attmap=0.12.11
-  - attrs=19.3.0
-  - babel=2.8.0
-  - bcrypt=3.1.7
-  - biopython=1.76
-  - boto3=1.12.49
-  - botocore=1.15.49
+  - atk=2.36.0
+  - atk-1.0=2.36.0
+  - attmap=0.13.0
+  - attrs=20.3.0
+  - azure-common=1.1.27
+  - azure-core=1.12.0
+  - azure-storage-blob=12.8.0
+  - babel=2.9.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.3
+  - bcrypt=3.2.0
+  - biopython=1.78
+  - blinker=1.4
+  - boto=2.49.0
+  - boto3=1.17.48
+  - botocore=1.20.48
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - ca-certificates=2021.1.19
-  - cachetools=3.1.1
+  - cachetools=4.2.1
   - cairo=1.16.0
   - certifi=2020.12.5
-  - cffi=1.14.0
-  - chardet=3.0.4
+  - cffi=1.14.4
+  - chardet=4.0.0
   - coincbc=2.10.5
-  - configargparse=1.2.3
-  - coreutils=8.31
-  - crc32c=2.0
-  - cryptography=2.9.2
+  - colorama=0.4.4
+  - configargparse=1.4
+  - coreutils=8.32
+  - crc32c=2.2
+  - cryptography=3.4.7
   - curl=7.71.1
   - datrie=0.8.2
   - decorator=4.4.2
-  - docutils=0.15.2
-  - dropbox=9.4.0
-  - expat=2.2.9
-  - fftw=3.3.8
+  - docutils=0.17
+  - dropbox=11.4.1
+  - expat=2.3.0
+  - fftw=3.3.9
   - filechunkio=1.8
+  - filelock=3.0.12
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=2.001
+  - font-ttf-source-code-pro=2.030
+  - font-ttf-ubuntu=0.83
   - fontconfig=2.13.1
-  - freetype=2.10.1
-  - ftputil=3.4
-  - gdk-pixbuf=2.36.12
-  - gettext=0.19.8.1
-  - ghostscript=9.22
-  - giflib=5.1.7
-  - gitdb=4.0.4
-  - gitpython=3.1.1
-  - glib=2.64.2
-  - gobject-introspection=1.58.2
-  - google-api-core=1.17.0
-  - google-api-python-client=1.9.1
-  - google-auth=1.14.1
-  - google-auth-httplib2=0.0.3
-  - google-cloud-core=1.3.0
-  - google-cloud-storage=1.28.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - ftputil=5.0.1
+  - gdk-pixbuf=2.42.2
+  - gettext=0.21.0
+  - ghostscript=9.53.3
+  - giflib=5.2.1
+  - gitdb=4.0.7
+  - gitpython=3.1.14
+  - glib=2.66.3
+  - gobject-introspection=1.66.1
+  - google-api-core=1.26.2
+  - google-api-python-client=2.1.0
+  - google-auth=1.28.0
+  - google-auth-httplib2=0.1.0
+  - google-cloud-core=1.6.0
+  - google-cloud-storage=1.31.2
   - google-crc32c=1.1.2
-  - google-resumable-media=0.5.0
-  - googleapis-common-protos=1.51.0
-  - graphite2=1.3.13
-  - graphviz=2.38.0
+  - google-resumable-media=1.2.0
+  - googleapis-common-protos=1.53.0
+  - graphite2=1.3.14
+  - graphviz=2.42.3
   - grep=3.4
-  - harfbuzz=2.4.0
-  - httplib2=0.18.1
-  - icu=64.2
-  - idna=2.9
-  - imagemagick=7.0.8_54
+  - gtk2=2.24.32
+  - gts=0.7.6
+  - harfbuzz=2.7.2
+  - httplib2=0.19.1
+  - icu=67.1
+  - idna=2.10
+  - imagemagick=7.0.10_28
   - imagesize=1.2.0
-  - importlib-metadata=1.6.0
-  - importlib_metadata=1.6.0
+  - importlib-metadata=3.10.0
+  - importlib_metadata=3.10.0
   - iniconfig=1.1.1
   - ipython_genutils=0.2.0
+  - isodate=0.6.0
   - jbig=2.1
-  - jinja2=2.11.2
-  - jmespath=0.9.5
-  - jpeg=9c
+  - jinja2=2.11.3
+  - jmespath=0.10.0
+  - jpeg=9d
   - jsonschema=3.2.0
-  - jupyter_core=4.6.3
-  - krb5=1.17.1
-  - lcms2=2.9
-  - ld_impl_linux-64=2.34
-  - libblas=3.8.0
-  - libcblas=3.8.0
+  - jupyter_core=4.7.1
+  - krb5=1.18.2
+  - lcms2=2.12
+  - ld_impl_linux-64=2.35.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
   - libcrc32c=1.1.1
   - libcroco=0.6.13
   - libcurl=7.71.1
-  - libedit=3.1.20170329
+  - libedit=3.1.20210216
   - libffi=3.2.1
   - libgcc-ng=9.3.0
-  - libgfortran-ng=7.3.0
-  - libiconv=1.15
-  - liblapack=3.8.0
-  - libopenblas=0.3.9
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
+  - libglib=2.66.3
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libopenblas=0.3.12
   - libpng=1.6.37
-  - libprotobuf=3.11.4
-  - librsvg=2.44.14
+  - libprotobuf=3.15.7
+  - librsvg=2.50.2
+  - libsodium=1.0.18
   - libssh2=1.9.0
-  - libstdcxx-ng=9.2.0
-  - libtiff=4.1.0
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.2.0
   - libtool=2.4.6
   - libuuid=2.32.1
-  - libwebp=1.0.2
-  - libxcb=1.13
+  - libwebp=1.2.0
+  - libwebp-base=1.2.0
+  - libxcb=1.14
   - libxml2=2.9.10
-  - llvm-openmp=10.0.0
+  - llvm-openmp=11.1.0
   - logmuse=0.2.6
-  - lz4-c=1.9.2
+  - lz4-c=1.9.3
   - markupsafe=1.1.1
-  - more-itertools=8.6.0
+  - more-itertools=8.7.0
   - mpi=1.0
-  - mpich=3.3.2
-  - multidict=4.7.5
-  - natsort=7.0.1
-  - nbformat=5.0.6
-  - ncurses=6.1
-  - networkx=2.4
+  - mpich=3.4.1
+  - msrest=0.6.21
+  - multidict=5.1.0
+  - natsort=7.1.1
+  - nbformat=5.1.3
+  - ncurses=6.2
+  - networkx=2.5.1
   - nextflow=20.10.0
-  - numpy=1.18.1
+  - numpy=1.20.2
   - oauth2client=4.1.3
-  - openjdk=11.0.1
+  - oauthlib=3.1.0
+  - openjdk=11.0.8
   - openjpeg=2.3.1
-  - openssl=1.1.1i
-  - packaging=20.4
-  - pandas=1.0.3
-  - pango=1.40.14
-  - paramiko=2.7.1
+  - openssl=1.1.1k
+  - packaging=20.9
+  - pandas=1.2.3
+  - pango=1.42.4
+  - paramiko=2.7.2
   - pcre=8.44
   - peppy=0.31.0
   - perl=5.26.2
-  - pip=20.1.1
+  - pip=21.0.1
   - pixman=0.38.0
   - pkg-config=0.29.2
   - pluggy=0.13.1
-  - prettytable=0.7.2
-  - protobuf=3.11.4
-  - psutil=5.7.0
+  - ply=3.11
+  - prettytable=2.1.0
+  - protobuf=3.15.7
+  - psutil=5.8.0
   - pthread-stubs=0.4
-  - pulp=2.3.1
+  - pulp=2.4
   - py=1.10.0
   - pyasn1=0.4.8
-  - pyasn1-modules=0.2.7
+  - pyasn1-modules=0.2.8
   - pycparser=2.20
-  - pygments=2.6.1
-  - pygraphviz=1.5
-  - pynacl=1.3.0
-  - pyopenssl=19.1.0
+  - pygments=2.8.1
+  - pygraphviz=1.7
+  - pyjwt=2.0.1
+  - pynacl=1.4.0
+  - pyopenssl=20.0.1
   - pyparsing=2.4.7
-  - pyrsistent=0.16.0
+  - pyrsistent=0.17.3
   - pysftp=0.2.9
   - pysocks=1.7.1
-  - pytest=6.2.2
+  - pytest=6.2.3
   - python=3.8.4
   - python-dateutil=2.8.1
-  - python-irodsclient=0.8.2
+  - python-irodsclient=0.8.6
   - python_abi=3.8
-  - pytz=2020.1
-  - pyyaml=5.3.1
+  - pytz=2021.1
+  - pyyaml=5.4.1
   - ratelimiter=1.2.0
-  - readline=8.0
-  - requests=2.23.0
-  - rsa=4.0
-  - s3transfer=0.3.3
-  - setuptools=46.1.3
+  - readline=8.1
+  - requests=2.25.1
+  - requests-oauthlib=1.3.0
+  - rsa=4.7.2
+  - s3transfer=0.3.6
+  - setuptools=52.0.0
   - simplejson=3.17.2
-  - six=1.14.0
+  - six=1.15.0
   - slacker=0.14.0
-  - smmap=3.0.2
-  - snakemake=5.32.0
-  - snakemake-minimal=5.32.0
-  - snowballstemmer=2.0.0
-  - sphinx=3.1.2
-  - sphinx_rtd_theme=0.5.0
+  - smart_open=5.0.0
+  - smmap=3.0.5
+  - snakemake=6.1.1
+  - snakemake-minimal=6.1.1
+  - snowballstemmer=2.1.0
+  - sphinx=3.5.3
+  - sphinx_rtd_theme=0.5.2
   - sphinxcontrib-applehelp=1.0.2
   - sphinxcontrib-devhelp=1.0.2
   - sphinxcontrib-htmlhelp=1.0.3
   - sphinxcontrib-jsmath=1.0.1
   - sphinxcontrib-qthelp=1.0.3
   - sphinxcontrib-serializinghtml=1.1.4
-  - sqlite=3.32.3
+  - sqlite=3.35.4
+  - stone=3.2.1
   - tk=8.6.10
   - toml=0.10.2
-  - toposort=1.5
-  - traitlets=4.3.3
+  - toposort=1.6
+  - traitlets=5.0.5
+  - typing-extensions=3.7.4.3
+  - typing_extensions=3.7.4.3
   - ubiquerg=0.6.1
   - uritemplate=3.0.1
-  - urllib3=1.25.9
+  - urllib3=1.26.4
   - veracitools=0.1.3
-  - wheel=0.34.2
+  - wcwidth=0.2.5
+  - wheel=0.36.2
   - wrapt=1.12.1
   - xmlrunner=1.7.7
   - xorg-fixesproto=5.0
@@ -198,7 +234,7 @@ dependencies:
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
-  - xorg-libx11=1.6.9
+  - xorg-libx11=1.6.12
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
@@ -213,8 +249,8 @@ dependencies:
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.5
-  - yaml=0.2.4
-  - yarl=1.3.0
-  - zipp=3.1.0
+  - yaml=0.2.5
+  - yarl=1.6.3
+  - zipp=3.4.1
   - zlib=1.2.11
-  - zstd=1.4.4
+  - zstd=1.4.9
